<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.mglad.cavern.LoginActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/payment_form"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/schedule_order_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/pick_up_text" />

            <RadioGroup
                android:id="@+id/schedule_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RadioButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="10dp"
                    android:paddingTop="10dp"
                    android:text="@string/pick_up_now" />

                <RadioButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="10dp"
                    android:paddingTop="10dp"
                    android:text="@string/pick_up_later" />
            </RadioGroup>

            <LinearLayout
                android:id="@+id/select_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone">

                <Button
                    android:id="@+id/select_date_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Select Date" />

                <TextView
                    android:id="@+id/date_preview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="10dp"
                    android:textSize="18sp" />
            </LinearLayout>


            <TimePicker
                android:id="@+id/select_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:timePickerMode="spinner"
                android:visibility="gone" />

            <TextView
                android:id="@+id/pay_type_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/payment_type_text" />

            <RadioGroup
                android:id="@+id/pay_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RadioButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="10dp"
                    android:paddingTop="10dp"
                    android:text="@string/pay_now" />

                <RadioButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="10dp"
                    android:paddingTop="10dp"
                    android:text="@string/pay_there" />
            </RadioGroup>

            <Button
                android:id="@+id/confirm_payment_button"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/confirm_payment"
                android:textStyle="bold" />

        </LinearLayout>
    </ScrollView>


    <ProgressBar
        android:id="@+id/payment_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone"
        android:layout_centerInParent="true" />

</RelativeLayout>
